tests/baselines/reference/unicodeExtendedEscapesInStrings20_ES6.errors.txt
unicodeExtendedEscapesInStrings20_ES6.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInStrings20_ES6.ts (1 errors) ====
    var x = "\u{";
                
!!! error TS1125: Hexadecimal digit expected.
    